--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="img/logo.svg">
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <link
     rel="apple-touch-icon"
